<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/chat_margin_normal"
    android:paddingLeft="@dimen/chat_margin_normal"
    android:paddingRight="@dimen/chat_margin_normal"
    android:paddingTop="@dimen/chat_margin_normal">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/chat_margin_normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_500" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_remove_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/bottom_sheet_group_admin_panel_member_remove_member_btn_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/red_500" />

            <!--line separator-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/chat_margin_normal"
                android:layout_marginRight="@dimen/chat_margin_normal"
                android:background="@color/grey_500"></View>

            <Button
                android:id="@+id/btn_see_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/bottom_sheet_group_admin_panel_member_see_profile_btn_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!--line separator-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/chat_margin_normal"
                android:layout_marginRight="@dimen/chat_margin_normal"
                android:background="@color/grey_500"></View>

            <Button
                android:id="@+id/btn_send_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/bottom_sheet_group_admin_panel_member_send_message_btn_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="gone" />

            <!--line separator-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/chat_margin_normal"
                android:layout_marginRight="@dimen/chat_margin_normal"
                android:background="@color/grey_500"></View>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/bottom_sheet_group_admin_panel_member_btn_cancel_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>